[package]
name = "mp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = [ "dynamic_linking" ] }
bevy_renet = "0.0.9"
bincode = "1.3.3"
leafwing-input-manager = "0.10.0"
noise = "0.8.1"
owo-colors = "3.5.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[features]

[profile.dev]
opt-level = 1
