[package]
name = "mp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = [ "dynamic_linking" ] }
bevy-inspector-egui = "0.21.0"
bevy_renet = "0.0.10"
bevy_xpbd_2d = "0.3.2"
bincode = "1.3.3"
itertools = "0.11.0"
leafwing-input-manager = "0.11.1"
noise = "0.8.1"
num_threads = "0.1.6"
owo-colors = "3.5.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[features]

[profile.dev]
opt-level = 1
